@@ -2,13 +2,14 @@ package com.gamebuy.store.utils;
 
 import java.io.*;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 
 public class RequestStringToMap {
 
 	public static HashMap<String, String> requestInputStreamToMap(InputStream is) throws IOException {
 
-		BufferedReader httpInput = new BufferedReader(new InputStreamReader(is, "UTF-8"));
+		BufferedReader httpInput = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
 
 		StringBuilder in = new StringBuilder();
 
@@ -22,33 +23,27 @@ public class RequestStringToMap {
 
 		String trimmed = in.toString().trim();
 		if (trimmed.equals("")) {
-			return new HashMap<String, String>();
+			return new HashMap<>();
 		}
 		return requestStringToMap(trimmed);
 	}
 
 	public static HashMap<String, String> requestStringToMap(String request) {
 		
-		HashMap<String, String> hashMap = new HashMap<String, String>();
+		HashMap<String, String> hashMap = new HashMap<>();
 		
 		String[] pairs = request.split("&");
-		
-		for (int i = 0; i < pairs.length; i++) {
-			
-			String pair = pairs[i];
-			
-			try {
-				String key = pair.split("=")[0];
-				key = URLDecoder.decode(key, "UTF-8");
-				
-				String value = pair.split("=")[1];
-				value = URLDecoder.decode(value, "UTF-8");
-				
-				hashMap.put(key, value);
-				
-			} catch (UnsupportedEncodingException e) {
-				System.err.println(e.getMessage());
-			}
+
+		for (String pair : pairs) {
+
+			String key = pair.split("=")[0];
+			key = URLDecoder.decode(key, StandardCharsets.UTF_8);
+
+			String value = pair.split("=")[1];
+			value = URLDecoder.decode(value, StandardCharsets.UTF_8);
+
+			hashMap.put(key, value);
+
 		}
 		return hashMap;
 	}
